# BLM2512_Data_Structures_and_Algorithms

./: README.md  meson.build
.github/workflows/: ci_meson.yml
Homework1/: DoublyLinkedList.c  DoublyLinkedList.h  FastLinkedList.c  FastLinkedList.h  main.c  meson.build  readme.md
Homework2/: Stack.c  Stack.h  main.c  meson.build  readme.md
Practice1/: main.c  meson.build
Project/: main.c  meson.build  readme.md
Project/TestMazes/: maze4.txt  maze5.txt  maze6.txt
